# Library-Management-System

./: README.md
Doc/: SAD.md  SAS.md  SDD.md  SRD.md  db.sql
Doc/Version-0.1/: SAD.md  db-version-2.sql  db.sql
Doc/Version-0.2/: API-v2.md  Report.md  SAD.md  SRS.md
Source/version-2.0/: .dockerignore  CMakeLists.txt  README.md  main.cpp  tree.md
Source/version-2.0/db/: sample_data.csv  sample_data.sql  schema.sql  seed.sql
Source/version-2.0/db/migrations/: 001_digital_media.sql
Source/version-2.0/docker/: Dockerfile  Dockerfile.test  docker-compose.yml  prometheus.yml
Source/version-2.0/src/api/controllers/: BatchImportController.cpp  BatchImportController.h  BorrowController.cpp  BorrowController.h  DigitalMediaController.cpp  DigitalMediaController.h  LoginController.cpp  LoginController.h  MediaController.cpp  MediaController.h  MetricsController.cpp  MetricsController.h  ReturnController.cpp  ReturnController.h  SearchController.cpp  SearchController.h  UserController.cpp  UserController.h
Source/version-2.0/src/api/grpc/: LogServiceServer.cpp  LogServiceServer.h
Source/version-2.0/src/api/middleware/: JwtMiddleware.cpp  JwtMiddleware.h  PermissionMiddleware.cpp  PermissionMiddleware.h
Source/version-2.0/src/application/services/: AuthService.cpp  AuthService.h  BatchImportService.cpp  BatchImportService.h  DigitalMediaService.cpp  DigitalMediaService.h  LibraryService.cpp  LibraryService.h  PermissionService.h  PgQueueService.h  UserService.cpp  UserService.h
Source/version-2.0/src/data/: MongoAdapter.cpp  MongoAdapter.h  PostgresAdapter.cpp  PostgresAdapter.h
Source/version-2.0/src/domain/borrow/: BorrowHistory.h
Source/version-2.0/src/domain/media/: DVD.h  DigitalMedia.h  Magazine.h
Source/version-2.0/src/domain/user/: Member.h  Permission.h  Teacher.h  User.h
Source/version-2.0/src/infrastructure/cache/: RedisClient.cpp  RedisClient.h
Source/version-2.0/src/infrastructure/config/: ConfigManager.cpp  ConfigManager.h
Source/version-2.0/src/infrastructure/crypto/: PasswordHasher.cpp
Source/version-2.0/src/infrastructure/db/: MongoConnection.cpp  MongoConnection.h  PostgresPool.h
Source/version-2.0/src/infrastructure/jwt/: JwtHelper.cpp  JwtHelper.h
Source/version-2.0/src/infrastructure/messaging/: KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h
Source/version-2.0/src/infrastructure/metrics/: MetricsRegistry.h
Source/version-2.0/src/infrastructure/queue/: PersistentQueue.cpp  QueueWorker.cpp  QueueWorker.h
Source/version-2.0/src/infrastructure/search/: OpenSearchClient.cpp  OpenSearchClient.h
Source/version-2.0/src/infrastructure/storage/: S3StorageClient.cpp  S3StorageClient.h
Source/version-2.0/src/utils/: DateTimeUtils.h  JsonUtils.h  StringUtils.h
Source/version-2.0/tests/: test_auth_service.cpp  test_user_service.cpp
version-2/: .env  main.cpp  tree.md
version-2/docker/: Dockerfile  docker-compose.yml
version-2/src/api/controllers/: BorrowController.cpp  MediaController.cpp  MediaController.h  ReturnController.cpp  UserController.cpp
version-2/src/api/middleware/: JwtMiddleware.cpp  JwtMiddleware.h
version-2/src/application/services/: AuthService.cpp  AuthService.h  LibraryService.cpp  LibraryService.h  PgQueueService.cpp  QueueService.cpp  QueueService.h  UserService.cpp  UserService.h
version-2/src/data/: PostgresAdapter.cpp  PostgresAdapter.h
version-2/src/domain/borrow/: ActiveBorrow.h  BorrowRecord.h
version-2/src/domain/media/: AudioBook.h  Book.h  Media.h  MediaCopy.h
version-2/src/domain/user/: Admin.h  Librarian.h  Role.h  Student.h
version-2/src/infrastructure/config/: ConfigManager.cpp  ConfigManager.h  EnvLoader.cpp  EnvLoader.h
version-2/src/infrastructure/crypto/: PasswordHasher.h
version-2/src/infrastructure/db/: PostgresPool.cpp  PostgresPool.h
version-2/src/infrastructure/queue/: PersistentQueue.cpp  PersistentQueue.h
version-2/src/utils/: Exceptions.h
